로고 이미지 추가

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- HTML head 영역에 추가 -->
+    <link
+      rel="apple-touch-icon"
+      href="/LwRfOUPKwUehYVChM8w2ZS2TFsL2h51BfntuOzC-gBIlXCnyoSyX7DJ77I_ZyGORUaY_1v-FBiMqOf_576JFKQ.svg"
+    />
+
     <title>노르디스크 재고 관리</title>
   </head>
   <body>
